Initial mayhem impl

--- a/cpp/commandline/CMakeLists.txt
+++ b/cpp/commandline/CMakeLists.txt
@@ -23,3 +23,16 @@ if (OSX)
   add_definitions(-D__MACOSX_CORE__)
   #incomplete - need to add frameworks -framework CoreAudio -framework CoreFoundation
 endif()
+
+
+if(MAXI_BUILD_FUZZER)
+  if(NOT CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+    message(FATAL_ERROR "Fuzzer is only supported on Clang")
+  endif()
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=fuzzer-no-link,address,undefined")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-sanitize-recover=undefined")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-omit-frame-pointer")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O1")
+  add_link_options(-fsanitize=fuzzer-no-link,address,undefined)
+  add_subdirectory(../../mayhem ${CMAKE_CURRENT_BINARY_DIR}/mayhem_binaries)
+endif()
