separate the cmake changes out from upstream

--- a/mayhem/CMakeLists.txt
+++ b/mayhem/CMakeLists.txt
@@ -4,9 +4,8 @@ project (maximilian_fuzz)
 
 set(CMAKE_CXX_STANDARD 17)
 
-include_directories(../../src)
-include_directories(../../src/libs)
-
+include_directories(../src)
+include_directories(../src/libs)
 
 if(MAXI_BUILD_FUZZER)
     if(NOT CMAKE_CXX_COMPILER_ID MATCHES "Clang")
@@ -17,14 +16,11 @@ if(MAXI_BUILD_FUZZER)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-omit-frame-pointer")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O1")
     add_link_options(-fsanitize=fuzzer-no-link,address,undefined)
-    #add_subdirectory(../../mayhem ${CMAKE_CURRENT_BINARY_DIR}/mayhem_binaries)
 endif()
 
 add_executable(Maximilian_fuzz Maximilian_fuzz.cpp ../src/maximilian.cpp)
 target_compile_options(Maximilian_fuzz PUBLIC -Wall)
 target_link_libraries(Maximilian_fuzz PUBLIC -lpthread)
-
-
 
 target_compile_options(Maximilian_fuzz PUBLIC -fsanitize=fuzzer,address,undefined)
 target_link_options(Maximilian_fuzz PUBLIC -fsanitize=fuzzer,address,undefined)
