--- a/mayhem/Dockerfile
+++ b/mayhem/Dockerfile
@@ -7,12 +7,12 @@ RUN \
 
 
 COPY . /Maximilian
-RUN mkdir -p /Maximilian/build
-WORKDIR /Maximilian/build
+RUN mkdir -p /Maximilian/mayhem/build
+WORKDIR /Maximilian/mayhem/build
 
 RUN cmake -DCMAKE_CXX_STANDARD=20 -DMAXI_BUILD_FUZZER=ON -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ ..
 RUN cmake --build .
 
 FROM  debian:stable-slim
-COPY --from=builder /AudioFile/build/mayhem/testsuite/ /mayhem/testsuite
-COPY --from=builder /AudioFile/build/mayhem/Maximilian_fuzz /Maximilian_fuzz
+COPY --from=builder /Maximilian/mayhem/build/testsuite/ /mayhem/testsuite
+COPY --from=builder /Maximilian/mayhem/build/Maximilian_fuzz /Maximilian_fuzz
